<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:contentDescription="@string/go_back"
        android:src="@drawable/left_arrow" />

    <TextView
        android:id="@+id/email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/back_arrow"
        android:layout_marginStart="20dp"
        android:text="@string/choose_a_password"
        android:textColor="#ffffff"
        android:textSize="25sp" />


    <!-- Email Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@color/white"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/re_password_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/re_enter_password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@color/white"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/re_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/finish_btn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/re_password_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:backgroundTint="@color/white"
        android:text="Finish"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>



