<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background_color"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:paddingLeft="24dp"
    android:paddingRight="24dp">

    <ImageView
        android:id="@+id/back_arrow"
        android:layout_width="50dp"
        android:layout_height="80dp"
        android:contentDescription="@string/go_back"
        android:src="@drawable/left_arrow" />

    <TextView
        android:id="@+id/email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/back_arrow"
        android:text="@string/whats_your_name"
        android:textColor="#ffffff"
        android:textSize="25sp" />


    <!-- Name Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/first_name_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/first_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/first_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textCursorDrawable="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Name Label -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:boxStrokeColor="@color/white"
        app:hintTextColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:hint="@string/lastname"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textCursorDrawable="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@+id/last_name_input"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="Continue"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>



